First draft after rewriting